<resources>
    <string name="app_name">LearnCodeOnline</string>
    <string name="login">log in</string>
    <string name="sign_up">sign up</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="email">Email</string>
    <string name="sign_in">sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">
        <u>Click here</u>
    </string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="choose_password">Choose password</string>
</resources>
