<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".login.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hr_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vr_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vr_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

    <TextView
            android:id="@+id/email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintTop_toTopOf="@id/hr_guideline_1"
            style="@style/AppTheme.TitleTextViewTheme"/>

    <EditText
            android:id="@+id/email_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintEnd_toEndOf="@id/vr_guideline_2"
            app:layout_constraintTop_toBottomOf="@id/email_textview"
            style="@style/AppTheme.EditTextTheme"
            android:hint="@string/insert_your_email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:nextFocusDown="@id/password_edittext"
            android:imeOptions="actionNext"
            />

    <TextView
            android:id="@+id/password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_password"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintTop_toBottomOf="@id/email_edittext"
            style="@style/AppTheme.TitleTextViewTheme"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/password_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintEnd_toEndOf="@id/vr_guideline_2"
            app:layout_constraintTop_toBottomOf="@id/password_textview"
            style="@style/AppTheme.EditTextTheme"
            android:hint="@string/choose_password"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:inputType="textPassword"
            android:nextFocusDown="@id/confirm_password_edittext"
            android:imeOptions="actionNext"
            />

    <TextView
            android:id="@+id/confirm_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintTop_toBottomOf="@id/password_edittext"
            style="@style/AppTheme.TitleTextViewTheme"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/confirm_password_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintEnd_toEndOf="@id/vr_guideline_2"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_textview"
            style="@style/AppTheme.EditTextTheme"
            android:hint="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />
    
    <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="@id/vr_guideline_1"
            app:layout_constraintEnd_toEndOf="@id/vr_guideline_2"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/AppTheme.ButtonTheme"
            android:text="@string/sign_up"
        />
</androidx.constraintlayout.widget.ConstraintLayout>